# swarm_robotics

./: .gitignore  README.md
Trials_Code/: cppFile  cppFile.cpp  encoder.py  imu.py  motors.py  mqtt_1pi.py  rplidarr.py
Trials_Code/lidar_env/: pyvenv.cfg
hardware_robots/: map_1748419501.pgm  map_1748419501.yaml
hardware_robots/src/explore/launch/: explore.launch.py
hardware_robots/src/hardware_software/: setup.py
hardware_robots/src/hardware_software/hardware_software/: map_to_json.py  mqtt_subscriber.py
hardware_robots/src/hardware_software/launch/: hardware_setup.launch.py  navigation_launch.py  robot_explore.launch.py  robot_in_swarm_explore.launch.py  rviz.launch.py  tf.launch.py
hardware_robots/src/hardware_software/params/: ekf_filter.yaml  nav2_multirobot_params.yaml  nav2_params.yaml  temp_nav2_params_namespaced.yaml
hardware_robots/src/hardware_software/urdf/: turtlebot3_burger.urdf  turtlebot3_waffle.urdf
hardware_robots/src/imu_reader/: setup.py
hardware_robots/src/imu_reader/imu_reader/: imu_reader_node.py
hardware_robots/src/map_merge/: CMakeLists.txt
hardware_robots/src/map_merge/launch/: map_expansion.launch.py
hardware_robots/src/map_merge/launch/tb3_simulation/: bringup_launch.py
hardware_robots/src/map_merge/urdf/: turtlebot3_waffle.urdf
hardware_robots/src/motor_controller/: package.xml
hardware_robots/src/motor_controller/motor_controller/: motor_driver.py  wheel_encoder_for_fusion.py
hardware_robots/src/my_robot_control/: CMakeLists.txt  package.xml  ros2_control_hardware.xml
hardware_robots/src/my_robot_control/include/my_robot_control/: diffbot_system.hpp
hardware_robots/src/my_robot_control/launch/: wheel_control.launch.py
hardware_robots/src/my_robot_control/src/: diffbot_system.cpp  motor_driver.cpp
install/: local_setup.sh  setup.sh
install/hardware_software/lib/hardware_software/: map_to_json
install/hardware_software/share/hardware_software/: package.sh
install/hardware_software/share/hardware_software/params/: nav2_params.yaml
install/hardware_software/share/hardware_software/urdf/: diffbot_description.urdf.xacro
log/: latest_build
robot/manual_control/: manual_control.py  server_side.py
robot/ros2ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
robot/ros2ws/log/: latest_build
robot/ros2ws/src/hardware_software/: package.xml  setup.cfg  setup.py
robot/ros2ws/src/hardware_software/hardware_software/: preprocess_nav2_namespaced_yaml.py
robot/ros2ws/src/hardware_software/launch/: hardware.launch.py  robot_explore.launch.py  robot_nav.launch.py  slam.launch.py
robot/ros2ws/src/hardware_software/params/: slam.yaml  temp_nav2_params_namespaced.yaml
robot/ros2ws/src/imu_reader/: package.xml
robot/ros2ws/src/install/: local_setup.sh  setup.sh
robot/ros2ws/src/log/: latest_build
robot/ros2ws/src/map_merge/config/: params.yaml
robot/ros2ws/src/map_merge/launch/: map_merge.launch.py
robot/ros2ws/src/map_merge/src/: map_merge.cpp
robot/ros2ws/src/motor_controller/: setup.py
robot/src/explore/config/: params.yaml
robot/src/leader_follower/: setup.py
robot/src/leader_follower/config/: follower_rviz.rviz  leader_rviz.rviz  merged_map.rviz
robot/src/leader_follower/launch/: multi_slam.launch.py  multi_slam_nav.launch.py  robots_in_world.launch.py
robot/src/leader_follower/leader_follower/: robot_inter_communication.py  set_init_odom_tf_frame.py  set_initial_odom.py
robot/src/leader_follower/params/: nav2_multirobot_params_all.yaml  turtlebot3_waffle_bridge.yaml
robot/src/leader_follower/urdf/: gz_waffle_multi_tf.sdf.xacro  turtlebot3_waffle.urdf
robot/src/map_merge/: CMakeLists.txt
robot/src/map_merge/launch/: map_expansion.launch.py  map_merge.launch.py
robot/src/map_merge/src/: map_expansion.cpp
robot/src/my_turtlebot3_fake_node/: CMakeLists.txt  package.xml
robot/src/my_turtlebot3_fake_node/config/: explore.yaml  slam.yaml
robot/src/my_turtlebot3_fake_node/include/my_turtlebot3_fake_node/: turtlebot3_fake_node.hpp
robot/src/my_turtlebot3_fake_node/launch/: 1tf_robots_w_fake_tb3_node.launch.py  autonomous_nav_slam.launch.py  basic_aut_slam.launch.py  slam.launch.py
robot/src/my_turtlebot3_fake_node/params/: turtlebot3_waffle_bridge_absolute_tf.yaml
robot/src/my_turtlebot3_fake_node/rviz/: default.rviz
robot/src/my_turtlebot3_fake_node/urdf/: turtlebot3_waffle.urdf
simulation_robots/src/leader_follower/: package.xml
simulation_robots/src/leader_follower/config/: rviz_1bot_slam_basic.rviz
simulation_robots/src/leader_follower/launch/: basic_rviz.launch.py  multi_slam_nav.launch.py  multinav2_gazebo.launch.py  namespaced_robot.launch.py  namespaced_rviz.launch.py  robots_in_world_1tf.launch.py
simulation_robots/src/leader_follower/models/turtlebot3_model/meshes/: waffle_base.dae
simulation_robots/src/leader_follower/params/: nav2_multirobot_params_all.yaml  turtlebot3_waffle_bridge_absolute_tf.yaml
simulation_robots/src/leader_follower/urdf/: gz_waffle_1tf.sdf.xacro  gz_waffle_multi_tf.sdf.xacro  turtlebot3_waffle.urdf
simulation_robots/src/leader_follower/worlds/: turtlebot3_house_closed.world.xacro
simulation_robots/src/map_merge/: CMakeLists.txt  package.xml
simulation_robots/src/map_merge/launch/: map_expansion_modular.launch.py
simulation_robots/src/map_merge/src/: map_expansion_modular.cpp
simulation_robots/src/map_merge/urdf/: gz_waffle.sdf.xacro
simulation_robots/src/my_turtlebot3_fake_node/launch/: basic_aut_slam.launch.py
simulation_robots/src/my_turtlebot3_fake_node/params/: waffle.yaml
simulation_robots/src/my_turtlebot3_fake_node/src/: turtlebot3_fake_node.cpp
simulation_robots/src/my_turtlebot3_fake_node/urdf/: gz_waffle.sdf.xacro
(+56 files in other folders)
